save team with players API
