# public_html/docs/swagger.yml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
     title: 'Boost App API'
-    version: 1.0.0.20220726
+    version: 1.0.0.20220801
 host: boost.test
 schemes:
     - http
@@ -1034,44 +1034,20 @@ paths:
         post:
             tags:
                 - PlayersAPI
-            summary: 'Create Player'
+            summary: 'Create Team and Players'
             consumes:
                 - application/json
                 - application/x-www-form-urlencoded
             produces:
                 - application/json
-            operationId: playersapi_post_create_player
+            operationId: playersapi_post_create_team_and_players
             description: ''
             parameters:
                 -
-                    name: name
+                    name: Players
                     in: formData
                     required: true
-                    description: 'Player name'
-                    type: string
-                -
-                    name: email
-                    in: formData
-                    required: false
-                    description: String
-                    type: string
-                -
-                    name: positions
-                    in: formData
-                    required: true
-                    description: 'List of positions as a comma seperated list. The API does NOT validate the data. It is upto the client to store and fetch this field'
-                    type: string
-                -
-                    name: image_uuid
-                    in: formData
-                    required: false
-                    description: 'UUID for the team profile picture. Get a UUID from file upload endpoint'
-                    type: string
-                -
-                    name: team_id
-                    in: formData
-                    required: false
-                    description: 'Team ID'
+                    description: "List of Players and Team. Example \r\n\r\n\r\n                    {\r\n                        \"data\":\r\n                        {\r\n                           \"team_name\":\"Team A\", //team_name reruired\r\n                           \"team_number\":\"T1\",  //team_number - optional\r\n                           \"player_count\":10 , //player_count - optional|integer\r\n                           \"team_image_uuid\":\"e41b5ecc-ca36-4648-abc2-eee71ba06275\", //team_image_uuid - optional|string\r\n                           //players array reruired\r\n                           \"players\":\r\n                               [\r\n                                    {\r\n                                        \"name\":\"wije\", //player name required\r\n                                        \"positions\":\"1,2\", //player positions as comma separated string - optional\r\n                                        \"image_uuid\":\"e41b5ecc-ca36-4648-abc2-eee71ba06275\", //uuid of the image - optional\r\n                                        \"email\":\"abc.emedia@gmail.com\", //email address - optional\r\n                                    },\r\n                                    {\r\n                                        \"name\":\"arjun\",\r\n                                        \"positions\":\"1\"\r\n                                    }\r\n                                ] \r\n                        }\r\n                     }"
                     type: string
                 -
                     name: Accept
@@ -1087,8 +1063,8 @@ paths:
             responses:
                 200:
                     schema:
-                        $ref: '#/definitions/PlayersAPICreatePlayerResponse'
-                    description: PlayersAPICreatePlayerResponse
+                        $ref: '#/definitions/PlayersAPICreateTeamAndPlayersResponse'
+                    description: PlayersAPICreateTeamAndPlayersResponse
                 401:
                     schema:
                         $ref: '#/definitions/ApiErrorUnauthorized'
@@ -2168,7 +2144,7 @@ definitions:
                     $ref: '#/definitions/Player'
             paginator:
                 $ref: '#/definitions/Paginator'
-    PlayersAPICreatePlayerResponse:
+    PlayersAPICreateTeamAndPlayersResponse:
         type: object
         properties:
             message:
